[package]
name = "burn-polecart-wasm"
version = "0.1.0"
authors = ["tsengia <tylersengia@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "ndarray"]
wgpu = []
ndarray = []

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.137"
js-sys = "0.3.77"
wasm-timer = "0.2.5"
wasm-logger = "0.2.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.50"
burn = { version = "0.15.0", default-features = false, features = ["ndarray", "autodiff"] }
#burn-wgpu = { version = "0.16.0", default-features = false }
rand = "0.9.0"

# This feature must be enabled to use Tensor::random in WASM
# See: https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
build-override.codegen-units = 1
